Fill out report skeleton

--- a/report.ipynb
+++ b/report.ipynb
@@ -14,7 +14,14 @@
    "id": "ee38bbe3",
    "metadata": {},
    "source": [
-    "## Introduction\n"
+    "## Introduction\n",
+    "* Context on right to work laws. What are they? What do they do? How do they affect the public sector? Teachers\n",
+    "* Brief history of RTW laws in the US \n",
+    "    * Janus 2018 nation wide? \n",
+    "    * Wisconsin 2011 \"Act 10\"\n",
+    "    * Michigan 2013\n",
+    "\n",
+    "* Research question"
    ]
   },
   {
@@ -22,7 +29,15 @@
    "id": "030e3045",
    "metadata": {},
    "source": [
-    "### Literature Review"
+    "### Literature Review\n",
+    "Papers more broadly on impacts of RWL/impacts of unions\n",
+    "* That ECON 460 paper about unions on unionised AND non unionised salaries and labour mobility \n",
+    "* RWL generally? \n",
+    "* RWL on specific sectors like health?\n",
+    "\n",
+    "Papers focusing on educational/teacher impacts of RWL \n",
+    "* Wisconsin 2011 paper diff in diff \"Heroes vs villains...\"\n",
+    "* 2013 "
    ]
   },
   {
@@ -30,7 +45,9 @@
    "id": "6ceb43dc",
    "metadata": {},
    "source": [
-    "## Data"
+    "## Data\n",
+    "* State correlates dataset\n",
+    "* NEA mean teacher salaries"
    ]
   },
   {
@@ -47,10 +64,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc27f96",
+   "id": "18b4a789",
    "metadata": {},
    "source": [
-    "### Parallel trends"
+    "Staggered diff in diff? "
    ]
   },
   {
@@ -62,9 +79,40 @@
     }
    },
    "source": [
-    "\n",
     "## Results"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfc27f96",
+   "metadata": {},
+   "source": [
+    "### Parallel trends\n",
+    "Justify similarity of three states\n",
+    "* Obvious: geography\n",
+    "* Economic conditions? Political beliefs? Demographics?\n",
+    "* Existing literature that compares the states?\n",
+    "\n",
+    "*Include line chart of teacher salaries between states*\n",
+    "* States appear to be parallel more or less based on visual inspection\n",
+    "* Teacher salaries between Wisconsin and Minnesota are especially similar pre-treatment\n",
+    "* What happens to Wisconsin b/w 2017/18? Fishy positive jump in salaries. \n",
+    "    * Maybe something to do with 2018 Janus nation wide implementation of RTW? But Act 10 was already in place so shouldn't have an impact "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a59cbc7",
+   "metadata": {},
+   "source": [
+    "Baseline fixed effects model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7750bc8",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -81,6 +129,8 @@
    "source": [
     "## Conclusion\n",
     "### Weaknesses\n",
+    "* Strong assumption of parallel trends. Visually appears to hold intact \n",
+    "* Don't have data to isolate effect of RTW laws on unionised teacher salaries vs non-unionised teacher salaries\n",
     "### Further studies"
    ]
   },
