Set up synthetic control dataset

--- a/report.ipynb
+++ b/report.ipynb
@@ -110,16 +110,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7750bc8",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "95e45406",
    "metadata": {},
    "source": [
-    "### Robustness/placebo tests"
+    "### Robustness/placebo tests\n",
+    "Control for state politics?"
    ]
   },
   {
@@ -131,6 +126,8 @@
     "### Weaknesses\n",
     "* Strong assumption of parallel trends. Visually appears to hold intact \n",
     "* Don't have data to isolate effect of RTW laws on unionised teacher salaries vs non-unionised teacher salaries\n",
+    "* Impact differences on high vs low teacher earners\n",
+    "* Assumption that the RTW laws/treatment are identical\n",
     "### Further studies"
    ]
   },
