Add note for summary stats

--- a/report.ipynb
+++ b/report.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "517efe05",
+   "metadata": {},
+   "source": [
+    "# QUESTIONS FOR FEEDBACK!!!!!! \n",
+    "* How to obtain effect estimates after running scpi synthetic control?\n",
+    "* Since salary data needed to be scale, interpret in standard deviations? Convert the standard deviations back into original salary terms?\n",
+    "* Inference how to interpret? Some overlap in earlier years following 2011, but no overlap between synthetic and Wisconsin in later years. So significant effect for later years?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e488bb60",
    "metadata": {},
    "source": [
@@ -67,6 +78,16 @@
    "source": [
     "## Data\n",
     "We obtained data from two sources. First is the Correlates of State Policy Project (CSPP) from the University of Michigan. It is a comprehensive state-level panel dataset containing a diverse range of policy indicator variables and outcomes such as education, healthcare, environment, and criminal justice. This dataset is assembled by compiling data from a plethora of different existing studies. The specific data that we use from the CSPP describes the timing of policies prohibiting agency fees for different states. Since we eventually narrowed our research scope to focus only on Wisconsin being treated, this dataset was not needed. Nevertheless, we mention it in this report because of its value and potential for future research. Second is a table on average teacher salaries by state from 1990 to 2020, obtained from the National Science Board (NSB). Their data was assembled using estimates from the National Education Association (NEA). We merged the two datasets by state and year. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5d32cc65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Include summary stats"
    ]
   },
   {
@@ -1822,17 +1843,6 @@
     "              e_order=e_order, e_lags=e_lags, e_method=e_method, u_missp=u_missp,\n",
     "              u_sigma=u_sigma, cores=cores, e_alpha=e_alpha, u_alpha=u_alpha)\n",
     "scplot(result, e_out=True, x_lab=\"year\", y_lab=\"Average State Teacher Salary\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38fde1e3",
-   "metadata": {},
-   "source": [
-    "# QUESTIONS FOR FEEDBACK!\n",
-    "* How to obtain effect estimates after running scpi synthetic control?\n",
-    "* Since salary data needed to be scale, interpret in standard deviations? Convert the standard deviations back into original salary terms?\n",
-    "* Inference how to interpret? Some overlap in earlier years following 2011, but no overlap between synthetic and Wisconsin in later years. So significant effect for later years?"
    ]
   },
   {
