--- a/report.ipynb
+++ b/report.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# QUESTIONS FOR FEEDBACK!!!!!! \n",
     "* How to obtain effect estimates after running scpi synthetic control?\n",
-    "* Since salary data needed to be scale, interpret in standard deviations? Convert the standard deviations back into original salary terms?\n",
+    "* Best way of finding second feature?\n",
+    "* What's the exact causal inference we should be using?\n",
     "* Inference how to interpret? Some overlap in earlier years following 2011, but no overlap between synthetic and Wisconsin in later years. So significant effect for later years?"
    ]
   },
@@ -44,7 +45,7 @@
     "\n",
     "Briefly talk about the history of laws essentially prohibiting unions in the United States, right to work laws etc. Apparently, Act 10 technically isn’t a RTW law but even broader/more stringent?\n",
     "\n",
-    "U.S. labour unions gained strong legal protections with the National Labor Relations Act of 1935, but later laws and policy developments steadily reduced their power. The Labor Management Relations Act of 1947 (Taft-Hartley Act) weakened key union tactics by restricting secondary boycotts and jurisdictional strikes, and authorizing states to enact Right-to-Work (RTW) laws that prohibit union security agreements and undermine the unions’ ability to collect membership fees for all covered workers [1], [2]. According to the U.S. Department of Labor, the Taft-Hartley Act marked a shift toward a legal outcome less favorable to unions, and subsequent measures, such as the Labor-Management Reporting and Disclosure Act of 1959, further increased federal oversight of internal union affairs and limited certain forms of picketing [3].\n",
+    "U.S. labour unions gained strong legal protections with the National Labor Relations Act of 1935, but later laws and policy developments steadily reduced their power. The Labor Management Relations Act of 1947 (Taft-Hartley Act) weakened key union tactics by restricting secondary boycotts and jurisdictional strikes, and authorizing states to enact Right-to-Work (RTW) laws that prohibit union security agreements and undermine the unions’ ability to collect membership fees for all covered workers [1], [2]. According to the U.S. Department of Labor, the Taft-Hartley Act marked a shift toward a legal outcome less favorable to unions, and subsequent measures, such as the Labor-Management Reporting and Disclosure Act of 1959, further increased federal oversight of internal union affairs and limited certain forms of picketing. [3].\n",
     "\n",
     "Short transitional paragraph/sentence connecting public unions to teachers. Three common strategies to weaken teacher unions are by introducing policies that preclude collective bargaining, agency fees (i.e., the collection of union membership fees), and strikes. \n",
     "\n",
