edited intro, methodology, included section for robustness

--- a/report.ipynb
+++ b/report.ipynb
@@ -80,7 +80,9 @@
    "metadata": {},
    "source": [
     "## Data\n",
-    "We obtained data from two sources. First is the Correlates of State Policy Project (CSPP) from the University of Michigan. It is a comprehensive state-level panel dataset containing a diverse range of policy indicator variables and outcomes such as education, healthcare, environment, and criminal justice. This dataset is assembled by compiling data from a plethora of different existing studies. The specific data that we use from the CSPP describes the timing of policies prohibiting agency fees for different states. Since we eventually narrowed our research scope to focus only on Wisconsin being treated, this dataset was not needed. Nevertheless, we mention it in this report because of its value and potential for future research. Second is a table on average teacher salaries by state from 1990 to 2020, obtained from the National Science Board (NSB). Their data was assembled using estimates from the National Education Association (NEA). We merged the two datasets by state and year. \n"
+    "We obtained data from two sources. First is the Correlates of State Policy Project (CSPP) from the University of Michigan. It is a comprehensive state-level panel dataset containing a diverse range of policy indicator variables and outcomes such as education, healthcare, environment, and criminal justice. This dataset is assembled by compiling data from a plethora of different existing studies. The specific data that we use from the CSPP describes the timing of policies prohibiting agency fees for different states. Since we eventually narrowed our research scope to focus only on Wisconsin being treated, this dataset was not needed. Nevertheless, we mention it in this report because of its value and potential for future research. Second is a table on average teacher salaries by state from 1990 to 2020, obtained from the National Science Board (NSB). Their data was assembled using estimates from the National Education Association (NEA). We merged the two datasets by state and year. \n",
+    "\n",
+    "Our analysis particularly used data from the CSPP dataset in the time period of 1990 to 2017 for the following states: Alaska, California, Colorado, Connecticut, Delaware, Hawaii, Illinois, Kentucky, Maine, Maryland, Massachusetts, Minnesota, Missouri, Montana, New Hampshire, New Jersey, New Mexico, New York, Ohio, Oregon, Pennsylvania, Rhode Island, Vermont, and Washington. For a robustness check later in the paper, we use data for Michigan in the same time period.\n"
    ]
   },
   {
@@ -110,14 +112,41 @@
    "id": "18b4a789",
    "metadata": {},
    "source": [
-    "We employ a differences-in-differences framework to find the causal effect of the RTW policy on teachers’ wages using two states: Wisconsin in the treatment group and Minnesota in the control group. Brief sentences justifying the similarities between Wisconsin and Minnesota: geographically obviously but also economically. Politically??? We further show that the pre-treatment trends of these two states are parallel, suggesting that in the counterfactual state-of-the-world, Minnesota remains unaffected post-treatment and maintains its trend of teachers’ salaries.\n",
+    "We employ a differences-in-differences framework to find the causal effect of the RTW policy on teachers’ wages.\n",
     "\n",
-    "Add more untreated states and run diff in diff. However, unlikely for parallel trends to hold. So turn to synthetic control \n",
+    "$$\n",
+    "\\left( E[Y(1)\\mid D = 1] - E[Y(1)\\mid D = 0] \\right)\n",
+    "-\n",
+    "\\left( E[Y(0)\\mid D = 1] - E[Y(0)\\mid D = 0] \\right)\n",
+    "$$\n",
     "\n",
-    "Synthetic Control: \n",
-    "However, there are several weaknesses in our DID set up, primarily having a low number of states to cluster standard errors on and a low number of observations for each state (approximately 29), that make inference challenging. \n",
+    "An initial approach was to use two states: Wisconsin in the treatment group and Minnesota in the control group. However, the number of observations for each state in the time period 1990-2017 is 28. With such a small sample size, the standard errors may not be well defined. Therefore, we use a synthetic control for our analysis. The treated unit is Wisconsin, and the donor pool consists of all the other states from the list in the “Data” section. The donor pool states never implemented the RTW or any similar policy within or prior to the time period being analyzed. We will combine the untreated states to build a fake state that closely resembles the pre-treatment trend of Wisconsin. We’ll see how the synthetic control behaves after the intervention.\n",
     "\n",
-    "Study from 1990 to 2017 to avoid 2018 implementation of Janus act, which was nation wide "
+    "$$\n",
+    "\\hat Y^{N}_{jt}\n",
+    "  = \\sum_{j=2}^{J+1} w_j Y_{jt}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{W} = (w_2, \\ldots, w_{J+1}) \\quad \\text{minimizes} \\quad\n",
+    "\\lVert \\mathbf{X}_1 - \\mathbf{X}_0 \\mathbf{W} \\rVert\n",
+    "  = \\left(\n",
+    "      \\sum_{h=1}^k v_h\n",
+    "      \\left(\n",
+    "        X_{h1} - \\sum_{j=2}^{J+1} w_j X_{hj}\n",
+    "      \\right)^2\n",
+    "    \\right)^{1/2}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\tau_{it} := Y_{it}(1) - Y_{it}(0), \\qquad t > T_0, \\; i = 1, \\ldots, N_1,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\tau_t := \\frac{1}{N_1} \\sum_{j=1}^{N_1} \\bigl( Y_{jt}(1) - Y_{jt}(0) \\bigr),\n",
+    "\\qquad t > T_0.\n",
+    "$$"
    ]
   },
   {
