edited methodology section

--- a/report.ipynb
+++ b/report.ipynb
@@ -104,7 +104,7 @@
     }
    },
    "source": [
-    "## Methods"
+    "## Methodology"
    ]
   },
   {
@@ -1889,6 +1889,40 @@
     "from scpi_pkg.scest import scest\n",
     "from scpi_pkg.scplot import scplot\n",
     "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edafb70c",
+   "metadata": {},
+   "source": [
+    "### Robustness\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a1214b",
+   "metadata": {},
+   "source": [
+    "For a robustness check, we apply the treatment group to Michigan, which implemented the RTW policy in 2013. While we must note that the Act 10 policy was more severe than the RTW policy in terms of weakening unions, the direction of the result is expected to be the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "937f2ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Robustness code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47efcc5e",
+   "metadata": {},
+   "source": [
+    "There is a clear..."
    ]
   },
   {
