included more descrip on synthetic control

--- a/report.ipynb
+++ b/report.ipynb
@@ -139,6 +139,18 @@
     "$$\n",
     "\n",
     "\n",
+    "We have $J+1$ units.\n",
+    "Without loss of generality, assume that unit $1$ is the unit that gets\n",
+    "affected by an intervention. Units $j = 2, \\ldots, J+1$ are a collection of\n",
+    "untreated units that we will refer to as the ``donor pool''. Also assume that\n",
+    "the data we have span $T$ time periods, with $T_0$ periods before the\n",
+    "intervention. For each unit $j$ and each time $t$, we observe the outcome\n",
+    "$Y_{jt}$. For each unit $j$ and each time $t$, define $ Y^{N}_{jt} $ as the\n",
+    "potential outcome without intervention and $Y^{I}_{jt}$ the potential outcome\n",
+    "with intervention. Then, the effect for the treated unit $j = 1$ at time $t$,\n",
+    "for $t > T_0$, is defined as\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\tau_{it} := Y_{it}(1) - Y_{it}(0), \\qquad t > T_0, \\; i = 1, \\ldots, N_1,\n",
     "$$\n",
