--- a/report.ipynb
+++ b/report.ipynb
@@ -9,7 +9,7 @@
     "* How to obtain effect estimates after running scpi synthetic control?\n",
     "* Best way of finding second feature?\n",
     "* What's the exact causal inference we should be using?\n",
-    "* Inference how to interpret? Some overlap in earlier years following 2011, but no overlap between synthetic and Wisconsin in later years. So significant effect for later years?"
+    "* Inference how to interpret? We followed the textbook by narrowing down the donor pool by MSE (RMSE in our case). Changing the minimum RMSE requirement alters the graph and its corresponding confidence intervals taller. Any advice?"
    ]
   },
   {
@@ -140,15 +140,7 @@
     "\n",
     "\n",
     "We have $J+1$ units.\n",
-    "Without loss of generality, assume that unit $1$ is the unit that gets\n",
-    "affected by an intervention. Units $j = 2, \\ldots, J+1$ are a collection of\n",
-    "untreated units that we will refer to as the ``donor pool''. Also assume that\n",
-    "the data we have span $T$ time periods, with $T_0$ periods before the\n",
-    "intervention. For each unit $j$ and each time $t$, we observe the outcome\n",
-    "$Y_{jt}$. For each unit $j$ and each time $t$, define $ Y^{N}_{jt} $ as the\n",
-    "potential outcome without intervention and $Y^{I}_{jt}$ the potential outcome\n",
-    "with intervention. Then, the effect for the treated unit $j = 1$ at time $t$,\n",
-    "for $t > T_0$, is defined as\n",
+    "Without loss of generality, assume that unit $1$ is the unit that gets affected by an intervention. Units $j = 2, \\ldots, J+1$ are a collection of untreated units that we will refer to as the ``donor pool''. Also assume that the data we have span $T$ time periods, with $T_0$ periods before the intervention. For each unit $j$ and each time $t$, we observe the outcome $Y_{jt}$. For each unit $j$ and each time $t$, define $ Y^{N}_{jt} $ as the potential outcome without intervention and $Y^{I}_{jt}$ the potential outcome with intervention. Then, the effect for the treated unit $j = 1$ at time $t$, for $t > T_0$, is defined as\n",
     "\n",
     "\n",
     "$$\n",
