fix method para

--- a/report.ipynb
+++ b/report.ipynb
@@ -122,6 +122,12 @@
     "\n",
     "An initial approach was to use two states: Wisconsin in the treatment group and Minnesota in the control group. However, the number of observations for each state in the time period 1990-2017 is 28. With such a small sample size, the standard errors may not be well defined. Therefore, we use a synthetic control for our analysis. The treated unit is Wisconsin, and the donor pool consists of all the other states from the list in the “Data” section. The donor pool states never implemented the RTW or any similar policy within or prior to the time period being analyzed. We will combine the untreated states to build a fake state that closely resembles the pre-treatment trend of Wisconsin. We’ll see how the synthetic control behaves after the intervention.\n",
     "\n",
+    "We have $J+1$ units. Without loss of generality, assume that unit $1$ is the unit that gets affected by an intervention. Units $j = 2, \\ldots, J+1$ are a collection of untreated units that we will refer to as the donor pool. Also assume that the data we have span $T$ time periods, with $T_0$ periods before the intervention. For each unit $j$ and each time $t$, we observe the outcome $Y_{jt}$. For each unit $j$ and each time $t$, define $ Y^{N}_{jt} $ as the potential outcome without intervention and $Y^{I}_{jt}$ the potential outcome with intervention.\n",
+    "\n",
+    "To estimate $Y^{N}_{1t}$, we remember that a combination of units in the donor pool may approximate the characteristics of the treated unit much better than any untreated unit alone. Thus, a synthetic control is defined as a weighted average of the units in the control pool. Given the weights $\\mathbf{W} = (w_2, \\ldots, w_{J+1})$, the synthetic control estimate of\n",
+    "$Y^{N}_{jt}$ is\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\hat Y^{N}_{jt}\n",
     "  = \\sum_{j=2}^{J+1} w_j Y_{jt}\n",
@@ -139,8 +145,7 @@
     "$$\n",
     "\n",
     "\n",
-    "We have $J+1$ units.\n",
-    "Without loss of generality, assume that unit $1$ is the unit that gets affected by an intervention. Units $j = 2, \\ldots, J+1$ are a collection of untreated units that we will refer to as the ``donor pool''. Also assume that the data we have span $T$ time periods, with $T_0$ periods before the intervention. For each unit $j$ and each time $t$, we observe the outcome $Y_{jt}$. For each unit $j$ and each time $t$, define $ Y^{N}_{jt} $ as the potential outcome without intervention and $Y^{I}_{jt}$ the potential outcome with intervention. Then, the effect for the treated unit $j = 1$ at time $t$, for $t > T_0$, is defined as\n",
+    "Then, the effect for the treated unit $j = 1$ at time $t$, for $t > T_0$, is defined as\n",
     "\n",
     "\n",
     "$$\n",
