--- a/report.ipynb
+++ b/report.ipynb
@@ -39,21 +39,21 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "Union membership rates have also declined in the past several decades, both in the United States and Canada (ECON 460 slide). Briefly write some more big picture union history in North America stuff\n",
+    "Union membership rates have also declined in the past several decades, both in the United States and Canada *(ECON 460 slide)*. *Briefly write some more big picture union history in North America stuff.*\n",
     "\n",
     "In his seminal paper on unions, Hirschman (1970) suggests that workers dissatisfied with their current working conditions can choose one of two actions. First, they may “exit”, meaning that they simply resign and seek another job. Second, they may use their “voice”, staying at their job to demand better conditions. He postulates that unions enable workers to use their voice by providing collective bargaining, and grievance and arbitration systems. Freeman (1980) investigates this notion further, finding that union membership is positively associated with years spent at the same company and negatively associated with quitting behaviour or being fired. \n",
     "\n",
-    "Briefly talk about the history of laws essentially prohibiting unions in the United States, right to work laws etc. Apparently, Act 10 technically isn’t a RTW law but even broader/more stringent?\n",
+    "*Briefly talk about the history of laws essentially prohibiting unions in the United States, right to work laws etc. Apparently, Act 10 technically isn’t a RTW law but even broader/more stringent?*\n",
     "\n",
     "U.S. labour unions gained strong legal protections with the National Labor Relations Act of 1935, but later laws and policy developments steadily reduced their power. The Labor Management Relations Act of 1947 (Taft-Hartley Act) weakened key union tactics by restricting secondary boycotts and jurisdictional strikes, and authorizing states to enact Right-to-Work (RTW) laws that prohibit union security agreements and undermine the unions’ ability to collect membership fees for all covered workers [1], [2]. According to the U.S. Department of Labor, the Taft-Hartley Act marked a shift toward a legal outcome less favorable to unions, and subsequent measures, such as the Labor-Management Reporting and Disclosure Act of 1959, further increased federal oversight of internal union affairs and limited certain forms of picketing. [3].\n",
     "\n",
-    "Short transitional paragraph/sentence connecting public unions to teachers. Three common strategies to weaken teacher unions are by introducing policies that preclude collective bargaining, agency fees (i.e., the collection of union membership fees), and strikes. \n",
+    "*Short transitional paragraph/sentence connecting public unions to teachers. Three common strategies to weaken teacher unions are by introducing policies that preclude collective bargaining, agency fees (i.e., the collection of union membership fees), and strikes.*\n",
     "\n",
     "An especially notable example of such policies was Act 10, a Wisconsin state law first introduced in 2011 under former Republican governor Scott Walker. Act 10 dictated how state government employees, including teachers and nurses, could use their “voice” to bargain over work pay and conditions (PBS Wisconsin). Among the changes included restrictions to what unions could negotiate beyond wages and the impediment of member fee collections, all of which worked to undermine the survival of public sector unions (WPR). The enactment proved to be controversial, triggering weeks of large protests, a walkout of Democratic senators, numerous legal challenges, and even recall elections seeking to unseat then Governor Walker. However, supporters argued that before the act, the previous labour market for public employees was inefficient and diverted proper spending in school districts and local governments (PBS Wisconsin). As of writing this report, attempts to repeal the law are still playing out in the courts more than a decade after it took effect. \n",
     "\n",
     "\n",
     "We are particularly interested in the effect of policies that weaken public-sector collective bargaining rights on teacher compensation.\n",
-    "**Thus, our research question is, “How do laws obstructing public employee unions affect teacher wages?” More specifically, we assess how the 2011 Wisconsin Act 10 impacted salaries for elementary and secondary public school teachers**. We hypothesize that by impeding the collective bargaining power of public employees, Act 10 reduced teacher salaries.\n",
+    "Thus, our research question is, “How do laws obstructing public employee unions affect teacher wages?” More specifically, we assess how the 2011 Wisconsin Act 10 impacted salaries for elementary and secondary public school teachers. We hypothesize that by impeding the collective bargaining power of public employees, Act 10 reduced teacher salaries.\n",
     "\n",
     "Janus v. American Federation of State, County, and Municipal Employees, Council 31 (2018) is a landmark U.S. Supreme Court decision that states and public sector unions may no longer collect “agency” or “fair-share” fees from non-consenting employees, on the ground that such compelled payments violate the First Amendment, thereby overruling Abood v. Detroit Board of Education (1997) [4]. Since public sector unions remain legally obligated to represent all workers in a bargaining unit, including non-members, the ruling removes a major, previously stable revenue source while preserving the duty of fair representation, creating strong free rider incentives. Policy analyses, therefore, describe Janus as a significant constraint on public sector union power, limiting unions’ financial resources, their capacity to bargain and litigate effectively, and their prospects for future membership growth [5], [6]."
    ]
@@ -71,7 +71,7 @@
     "However, there has been a lack of \n",
     "This report contributes to the literature in the following ways. First. methodological Second. Lastly. \n",
     "\n",
-    "No papers that investigate Act 10 effect on teacher salaries using synthetic control? \n"
+    "*No papers that investigate Act 10 effect on teacher salaries using synthetic control?*\n"
    ]
   },
   {
