--- a/report.ipynb
+++ b/report.ipynb
@@ -5,7 +5,7 @@
    "id": "517efe05",
    "metadata": {},
    "source": [
-    "# QUESTIONS FOR FEEDBACK!!!!!! \n",
+    "# QUESTIONS FOR FEEDBACK ! \n",
     "* Did we calculate treatment effects correctly? We extracted post treatment the synthetic control salaries and took the difference between actual Wisconsin salaries and sythetic control salaries.\n",
     "* What's the exact causal inference we should be using? \n",
     "*  We followed the textbook by narrowing down the donor pool using a MSE threshold (RMSE in our case) and running a second synthetic control. Changing the minimum RMSE requirement alters the graph and its corresponding confidence intervals taller. Any advice?"
