--- a/report.ipynb
+++ b/report.ipynb
@@ -124,7 +124,7 @@
     "We have $J+1$ units. Without loss of generality, assume that unit $1$ is the unit that gets affected by an intervention. Units $j = 2, \\ldots, J+1$ are a collection of untreated units that we will refer to as the donor pool. Also assume that the data we have span $T$ time periods, with $T_0$ periods before the intervention. For each unit $j$ and each time $t$, we observe the outcome $Y_{jt}$. For each unit $j$ and each time $t$, define $ Y^{N}_{jt} $ as the potential outcome without intervention and $Y^{I}_{jt}$ the potential outcome with intervention.\n",
     "\n",
     "To estimate $Y^{N}_{1t}$, we remember that a combination of units in the donor pool may approximate the characteristics of the treated unit much better than any untreated unit alone. Thus, a synthetic control is defined as a weighted average of the units in the control pool. Given the weights $\\mathbf{W} = (w_2, \\ldots, w_{J+1})$, the synthetic control estimate of\n",
-    "$Y^{N}_{jt}$ is\n",
+    "$Y^{N}_{jt}$ is:\n",
     "\n",
     "\n",
     "$$\n",
@@ -132,6 +132,7 @@
     "  = \\sum_{j=2}^{J+1} w_j Y_{jt}\n",
     "$$\n",
     "\n",
+    "where, \n",
     "$$\n",
     "\\mathbf{W} = (w_2, \\ldots, w_{J+1}) \\quad \\text{minimizes} \\quad\n",
     "\\lVert \\mathbf{X}_1 - \\mathbf{X}_0 \\mathbf{W} \\rVert\n",
@@ -141,12 +142,22 @@
     "        X_{h1} - \\sum_{j=2}^{J+1} w_j X_{hj}\n",
     "      \\right)^2\n",
     "    \\right)^{1/2}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "Then, the effect for the treated unit $j = 1$ at time $t$, for $t > T_0$, is defined as\n",
-    "\n",
-    "\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc7f6aec",
+   "metadata": {},
+   "source": [
+    "Then, the effect for the treated unit $j = 1$ at time $t$, for $t > T_0$, is defined as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12816a20",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\tau_{it} := Y_{it}(1) - Y_{it}(0), \\qquad t > T_0, \\; i = 1, \\ldots, N_1,\n",
     "$$\n",
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "4dc60074",
    "metadata": {},
    "outputs": [
@@ -182,7 +193,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyfixest\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpf\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyfixest\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpf\u001b[39;00m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
      ]
     }
@@ -248,6 +259,14 @@
     "df = df_merged[~((df_merged['st'].isin(states_with_fees_prohibited)) & (df_merged['st'] != 'WI'))]\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e23d29e",
+   "metadata": {},
+   "source": [
+    "The above table "
    ]
   },
   {
@@ -835,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "526-project",
    "language": "python",
    "name": "python3"
   },
@@ -849,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
