--- a/report.ipynb
+++ b/report.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4dc60074",
    "metadata": {},
    "outputs": [
@@ -263,14 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e23d29e",
-   "metadata": {},
-   "source": [
-    "The above table "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fe55ea2d",
    "metadata": {},
    "source": [
@@ -305,7 +297,7 @@
    "id": "e0e6f16e",
    "metadata": {},
    "source": [
-    "Beyond the similarities between WIsconsin and Minnesota, we can plot parallel trends. Seems to hold pretreatment. So convincing that post treamtent counterfactual would also trend the same. "
+    "Beyond the similarities between Wisconsin and Minnesota, we can plot parallel trends. Seems to hold pretreatment. So convincing that post treamtent counterfactual would also trend the same. As an initial benchmark, we compare Wisconsin (treated) to Minnesota (control). The identifying assumption in a two-unit DID is parallel trends: absent treatment, Wisconsin salaries would have followed the same trend as Minnesota salaries. The figure below plots both series and a vertical line at 2011 (the Act 10 policy year), allowing a visual assessment of whether pre-treatment trends are similar."
    ]
   },
   {
@@ -342,6 +334,14 @@
     "    df_did1\n",
     ") \n",
     "fit_static_twfe1.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39d5281c",
+   "metadata": {},
+   "source": [
+    "With state and year fixed effects, the coefficient on agencyfeesprohibited is −$2,208 (95% CI: [−$3,678, −$738]), suggesting lower average teacher salaries after agency fees are prohibited in this sample. The “R2 Within” of 0.268 indicates the treatment explains a meaningful share of within-state changes in this restricted panel, but inference should be treated cautiously given the small N (56) and iid standard errors."
    ]
   },
   {
